--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,14 @@
   "version": "0.1.0",
   "description": "Find page related website discussions.",
   "homepage_url": "https://github.com/rwanyoike/tolon",
+  "icons": {
+    "48": "images/icon48.png",
+    "64": "images/icon64.png",
+    "96": "images/icon96.png",
+    "128": "images/icon128.png",
+    "192": "images/icon192.png",
+    "256": "images/icon256.png"
+  },
   "browser_action": {
     "default_popup": "index.html"
   },
