--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "webextension-polyfill": "^0.6.0"
   }
 }
