--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
+    "html-beautify-webpack-plugin": "^1.0.5",
+    "html-webpack-deploy-plugin": "^2.0.6",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
     "prettier": "^1.19.1",
