--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "prettier": "^1.19.1",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.10.1"
+    "webpack-dev-server": "^3.10.1",
+    "zip-webpack-plugin": "^3.0.0"
   },
   "dependencies": {
     "ky": "^0.16.1",
