--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "start": "webpack-dev-server",
     "lint": "eslint --ext .js,.jsx ."
   },
+  "engines": {
+    "node": ">=10.13.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.7.7",
     "@babel/preset-env": "^7.7.7",
@@ -14,6 +17,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^5.1.1",
     "css-loader": "^3.4.0",
+    "dotenv": "^8.2.0",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-config-prettier": "^6.9.0",
@@ -24,10 +28,10 @@
     "eslint-plugin-react": "^7.17.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "friendly-errors-webpack-plugin": "^1.7.0",
-    "html-beautify-webpack-plugin": "^1.0.5",
     "html-webpack-deploy-plugin": "^2.0.6",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.9.0",
+    "optimize-css-assets-webpack-plugin": "^5.0.3",
     "prettier": "^1.19.1",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10",
@@ -35,7 +39,7 @@
     "zip-webpack-plugin": "^3.0.0"
   },
   "dependencies": {
-    "ky": "^0.16.1",
+    "ky": "^0.16.2",
     "normalize.css": "^8.0.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
