--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,8 +2,8 @@
   "manifest_version": 2,
   "name": "Tolon",
   "version": "0.5.0",
-  "description": "Find page related website discussions. On Hacker News and Reddit.",
-  "homepage_url": "https://github.com/rwanyoike/tolon",
+  "description": "Find webpage discussions on Hacker News and Reddit.",
+  "homepage_url": "https://github.com/rwanyoike/tolon-browser-extension",
   "icons": {
     "64": "images/icon.png",
     "128": "images/icon@2x.png"
