--- a/.editorconfig
+++ b/.editorconfig
@@ -1,8 +1,9 @@
 root = true
 
 [*]
-end_of_line = lf
-indent_size = 2
 indent_style = space
-insert_final_newline = true
+indent_size = 2
 trim_trailing_whitespace = true
+insert_final_newline = true
+charset = utf-8
+end_of_line = lf
