--- a/package.json
+++ b/package.json
@@ -11,22 +11,23 @@
     "test": "vitest"
   },
   "devDependencies": {
-    "@eslint/js": "^9.11.0",
+    "@eslint/js": "^9.12.0",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
-    "@types/react": "^18.3.8",
+    "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@types/webextension-polyfill": "^0.12.1",
-    "@vanilla-extract/css": "^1.15.5",
-    "@vanilla-extract/vite-plugin": "^4.0.15",
-    "@vitejs/plugin-react": "^4.3.1",
+    "@vanilla-extract/css": "^1.16.0",
+    "@vanilla-extract/vite-plugin": "^4.0.16",
+    "@vitejs/plugin-react": "^4.3.2",
+    "@vitest/coverage-v8": "^2.1.2",
     "date-fns": "^4.1.0",
-    "eslint": "^9.11.0",
+    "eslint": "^9.12.0",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
-    "globals": "^15.9.0",
+    "globals": "^15.10.0",
     "happy-dom": "^15.7.4",
     "immer": "^10.1.1",
     "ky": "^1.7.2",
@@ -34,11 +35,11 @@
     "prettier": "3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "typescript": "^5.6.2",
-    "typescript-eslint": "^8.6.0",
+    "typescript": "<5.6",
+    "typescript-eslint": "^8.8.0",
     "use-immer": "^0.10.0",
-    "vite": "^5.4.7",
-    "vitest": "^2.1.1",
+    "vite": "^5.4.8",
+    "vitest": "^2.1.2",
     "webextension-polyfill": "^0.12.0"
   }
 }
