--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "tolon-browser-extension",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.6.1",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -39,6 +39,7 @@
     "typescript-eslint": "^8.8.0",
     "use-immer": "^0.10.0",
     "vite": "^5.4.8",
+    "vite-plugin-zip-pack": "^1.2.4",
     "vitest": "^2.1.2",
     "webextension-polyfill": "^0.12.0"
   }
