--- a/package.json
+++ b/package.json
@@ -8,10 +8,21 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "test": "vitest"
+    "test": "vitest",
+    "storybook": "storybook dev -p 6006",
+    "build-storybook": "storybook build"
   },
   "devDependencies": {
     "@eslint/js": "^9.12.0",
+    "@chromatic-com/storybook": "^1.9.0",
+    "@storybook/addon-essentials": "^8.3.2",
+    "@storybook/addon-interactions": "^8.3.2",
+    "@storybook/addon-links": "^8.3.2",
+    "@storybook/addon-onboarding": "^8.3.2",
+    "@storybook/blocks": "^8.3.2",
+    "@storybook/react": "^8.3.2",
+    "@storybook/react-vite": "^8.3.2",
+    "@storybook/test": "^8.3.2",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.0.1",
     "@testing-library/user-event": "^14.5.2",
@@ -28,6 +39,7 @@
     "eslint-plugin-react-hooks": "^5.1.0-rc.0",
     "eslint-plugin-react-refresh": "^0.4.12",
     "globals": "^15.10.0",
+    "eslint-plugin-storybook": "^0.8.0",
     "happy-dom": "^15.7.4",
     "immer": "^10.1.1",
     "ky": "^1.7.2",
@@ -37,10 +49,16 @@
     "react-dom": "^18.3.1",
     "typescript": "<5.6",
     "typescript-eslint": "^8.8.0",
+    "storybook": "^8.3.2",
     "use-immer": "^0.10.0",
     "vite": "^5.4.8",
     "vite-plugin-zip-pack": "^1.2.4",
     "vitest": "^2.1.2",
     "webextension-polyfill": "^0.12.0"
+  },
+  "eslintConfig": {
+    "extends": [
+      "plugin:storybook/recommended"
+    ]
   }
 }
