--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,5 +1,5 @@
 {
-  "manifest_version": 3,
+  "manifest_version": 2,
   "name": "Tolon Browser Extension",
   "version": "0.6.1",
   "description": "Find webpage discussions on the web. (e.g. Hacker News, Reddit)",
@@ -8,7 +8,7 @@
     "64": "images/icon.png",
     "128": "images/icon@2x.png"
   },
-  "action": {
+  "browser_action": {
     "default_popup": "index.html"
   },
   "permissions": [
